--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "dokany"]
-	path = dokany
-	url = https://github.com/dokan-dev/dokany.git
+[submodule "deps/spdlog"]
+	path = deps/spdlog
+	url = https://github.com/gabime/spdlog
+[submodule "deps/dokany"]
+	path = deps/dokany
+	url = https://github.com/dokan-dev/dokany
