--- a/9p-dokany.vcxproj
+++ b/9p-dokany.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="9pfs.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="protocol\Client.cpp" />
+    <ClCompile Include="protocol\FidTracker.cpp" />
     <ClCompile Include="protocol\MessageReader.cpp" />
     <ClCompile Include="protocol\TxMessage.cpp" />
     <ClCompile Include="protocol\TxMessageBuilder.cpp" />
@@ -112,6 +113,7 @@
     <ClInclude Include="protocol\ConstantValues.h" />
     <ClInclude Include="protocol\DataTypes.h" />
     <ClInclude Include="protocol\Exceptions.h" />
+    <ClInclude Include="protocol\FidTracker.h" />
     <ClInclude Include="protocol\MessageReader.h" />
     <ClInclude Include="protocol\MessageTypes.h" />
     <ClInclude Include="protocol\TxMessage.h" />
