--- a/9p-dokany.vcxproj
+++ b/9p-dokany.vcxproj
@@ -99,6 +99,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="9pfs.cpp" />
+    <ClCompile Include="9pfs_operations.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="protocol\Client.cpp" />
     <ClCompile Include="protocol\FidTracker.cpp" />
@@ -109,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="9pfs.h" />
+    <ClInclude Include="9pfs_operations.h" />
     <ClInclude Include="protocol\Client.h" />
     <ClInclude Include="protocol\ConstantValues.h" />
     <ClInclude Include="protocol\DataTypes.h" />
