--- a/9p-dokany.vcxproj.filters
+++ b/9p-dokany.vcxproj.filters
@@ -20,6 +20,7 @@
       <Filter>protocol</Filter>
     </ClCompile>
     <ClCompile Include="9pfs_operations.cpp" />
+    <ClCompile Include="Config.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="9pfs.h" />
@@ -52,6 +53,7 @@
       <Filter>protocol</Filter>
     </ClInclude>
     <ClInclude Include="9pfs_operations.h" />
+    <ClInclude Include="Config.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="protocol">
